crates/next-custom-transforms/tests/errors/server-actions/client-graph/1/output.js
/* __next_internal_client_entry_do_not_use__ default auto */ /* __next_internal_action_entry_do_not_use__ {"6a88810ecce4a4e8b59d53b8327d7e98bbf251d7":"$$RSC_SERVER_ACTION_0"} */ export default function App() {
    var fn = registerServerReference("6a88810ecce4a4e8b59d53b8327d7e98bbf251d7", $$RSC_SERVER_ACTION_0);
    return <div>App</div>;
}
export async function $$RSC_SERVER_ACTION_0() {}
